<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/Obtain_Contact_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1">


    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/play_human" />

    <Space
        android:layout_width="32dp"
        android:layout_height="32dp" />

    <TextView
        android:id="@+id/tv_theirgmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_starter_gmail"/>

    <Space
        android:layout_width="12dp"
        android:layout_height="12dp" />

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/gmailForm"
        android:inputType="textEmailAddress"
        android:layout_margin="15dp"
        android:hint="@string/please_enter_starter_gmail"
        android:textAlignment="center"

        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/findstarter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/find_starter" />

    <TextView
        android:id="@+id/userGmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/no_player"/>

    <Space
        android:layout_width="12dp"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"/>

    <Space
        android:layout_width="12dp"
        android:layout_height="20dp" />


    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/play_avatar" />

    <Button
        android:id="@+id/exit"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/exit_menu" />

</LinearLayout>
